update face html5 homework

--- a/canvas/1-playground.html
+++ b/canvas/1-playground.html
@@ -13,11 +13,11 @@
     <!-- <script src="6-image.js"></script> -->
     <!-- <script src="7-image-more.js"></script> -->
     <!-- <script src="8-arc.js"></script> -->
-    <!-- <script src="9-curve.js"></script> -->
+    <script src="9-curve.js"></script>
     <!-- <script src="10-line.js"></script> -->
     <!-- <script src="11-linear.js"></script> -->
     <!-- <script src="12-radial.js"></script> -->
-    <script src="13-drawing.js"></script>
+    <!-- <script src="13-drawing.js"></script> -->
 
     <style>
         p {
